--- a/src/scss/components/paralaxs/_paralax1.scss
+++ b/src/scss/components/paralaxs/_paralax1.scss
@@ -35,7 +35,7 @@
         right: 0;
         bottom: 0;
         min-height: 100vh;
-        background-image: url(http://i.stack.imgur.com/vhoa0.jpg);
+        // background-image: url(http://i.stack.imgur.com/vhoa0.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         transition: 1s linear;
